@@ -1,5 +1,8 @@
 MMI Ont2Dot ChangeLog
 
+2010-06-21
+	- jenaInfo._prepareInfoAboutOntology: Use getLexicalForm when getting the version.
+	
 2010-05-23
 	- include a "generated by" box with name and version of input ontology.
 	
